src/objects/Study_Team_Allocation_Per_Week__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Capacity__c</fullName>
        <label>Actual Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <formula>Name &amp;  CASESAFEID(Study_Team_Members__r.Team_Member__c)</formula>
        <label>External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_per_Week__c</fullName>
        <label>Forecasted Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Over_Allocated__c</fullName>
        <formula>Hours_per_Week__c &gt;= 45</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Over Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Week__c</fullName>
        <label>Start Date of Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Study_Team_Members__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Team Members</label>
        <referenceTo>Study_Team_Members__c</referenceTo>
        <relationshipLabel>Study Team Allocation Per Weeks</relationshipLabel>
        <relationshipName>Study_Team_Allocation_Per_Weeks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Study Team Allocation Per Week</label>
    <nameField>
        <label>Week Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Team Allocation Per Weeks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>